将判题模块部署到docker上